Fixed issue with clipping of draws screen on the phone.

--- a/client/src/app/draws/draws-common/tabbed-draws-panel/tabbed-draws-panel.component.scss
+++ b/client/src/app/draws/draws-common/tabbed-draws-panel/tabbed-draws-panel.component.scss
@@ -16,7 +16,7 @@
 }
 
 .one-round-panel {
-  height: 100%;
+  height: calc(100vh - 135px);
   overflow: auto;
 }
 
