--- a/client/src/app/draws/draws-view/draws-view-detail/draws-view-detail.component.scss
+++ b/client/src/app/draws/draws-view/draws-view-detail/draws-view-detail.component.scss
@@ -1,7 +1,7 @@
 @use "src/my-theme" as *;
 
 .all-draws-panel {
-  height: calc(100vh - 145px);
+  height: calc(100vh - 132px);
   //border: 1px solid deeppink;
   overflow: hidden;
 }
